Live changes, legend, and Tweens added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
       header {
         margin-bottom: 40px;
       }
+      .footer {
+        position: fixed;
+        left: 100%;
+        bottom: 0;
+        width: 100%;
+        color: white;
+        text-align: center;
+      }
     </style>
   </head>
   <body class="green lighten-1">
@@ -56,6 +64,12 @@
       </div>
     </div>
 
+    <div class="footer">
+      <p class="white-text center text-lighten-2">
+        Made by Depak Borhara
+      </p>
+    </div>
+
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-firestore.js"></script>
@@ -80,6 +94,7 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
     <script src="index.js"></script>
     <script src="graph.js"></script>
   </body>
